--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,3 +12,49 @@ img,
 video {
   display: block;
 }
+body {
+  font-family: lato, sans-serif;
+  font-style: normal;
+}
+.cart-produits {
+  display: flex;
+  width: 284px;
+  padding: 20px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  border-radius: 10px;
+  background: #fff;
+  box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.25);
+  margin: 50px;
+}
+h3 {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 15px;
+}
+p {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 15px;
+}
+
+.prix {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+}
+.item {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  align-self: stretch;
+}
+
+.produit {
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 5px;
+  flex: 1 0 0;
+}
